# sensor_pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
sensor_pipeline/: __init__.py  cli.py  models.py  pipeline.py
sensor_pipeline/sources/: __init__.py  file_source.py  source_base.py
sensor_pipeline/transforms/: __init__.py  aggregate_mesh.py  convert_temperature.py  convert_timestamp.py  deduplicate_readings.py  detect_anomalies.py  validate_schema.py
sensor_pipeline_prefect/: __init__.py  flow.py
tests/: __init__.py
tests/sensor_pipeline/: __init__.py  test_pipeline.py
tests/sensor_pipeline/sources/: __init__.py  test_file_source.py
tests/sensor_pipeline/transforms/: __init__.py  test_aggregate_mesh.py  test_convert_temperature.py  test_convert_timestamp.py  test_deduplicate_readings.py  test_detect_anomalies.py  test_validate_schema.py
tests/sensor_pipeline_prefect/: __init__.py  test_flow.py
